Fixed some layout issues

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,7 @@
   width: 100vw;
   margin: 0 auto;
   text-align: center;
+  height: 100%;
 }
 
 .logo {
